[package]
name = "libflux"
version = "0.1.0"
edition = "2021"
authors = ["proplayer919 <me@proplayer919.dev>"]
description = "A secure, performant, and developer-friendly container runtime using Linux namespaces"
license = "MIT"
repository = "https://github.com/libflux/libflux"
keywords = ["containers", "namespaces", "linux", "runtime", "cgroups"]
categories = ["os::linux-apis", "command-line-utilities"]

[[bin]]
name = "libflux"
path = "src/main.rs"

[dependencies]
# Core syscall and Linux APIs
nix = { version = "0.27", features = ["process", "mount", "socket", "ucontext", "user", "resource", "fs", "sched", "hostname"] }

# CLI and configuration
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Utilities
directories = "5.0"
uuid = { version = "1.0", features = ["v4"] }
libc = "0.2"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

# File system and path utilities
tempfile = "3.8"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
